--- a/frontend/sya/package.json
+++ b/frontend/sya/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "element-ui": "^2.13.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
@@ -17,6 +18,8 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
