--- a/frontend/sya/package.json
+++ b/frontend/sya/package.json
@@ -12,7 +12,8 @@
     "crypto-js": "^4.0.0",
     "element-ui": "^2.13.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
