--- a/frontend/sya/src/config.sample.json
+++ b/frontend/sya/src/config.sample.json
@@ -6,5 +6,5 @@
     "accessKeySecret": "myaccesssecrect",
     "bucket": "bucket"
   },
-  "OSS_URL": "http://myawesomebucket.com/"
+  "OSS_URL": "https://myawesomebucket.com/"
 }
